<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:enabled="true"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/back_to_details"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_previous_step"
        android:enabled="true"
        android:icon="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:title="@string/previous_step"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next_step"
        android:enabled="true"
        android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:title="@string/next_step"
        app:showAsAction="ifRoom" />
</menu>