<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/recipe_details_fragment_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bakingstreet.RecipeDetailsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recipe_details_fragment_ingredients"
        android:textSize="@dimen/recipe_details_fragment_titles_textSize"
        style="@style/RecipeDetailsFragmentElementTheme"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_ingredients_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/RecipeDetailsFragmentElementTheme"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recipe_details_fragment_steps"
        android:textSize="@dimen/recipe_details_fragment_titles_textSize"
        style="@style/RecipeDetailsFragmentElementTheme"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_steps_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        style="@style/RecipeDetailsFragmentElementTheme"/>

</LinearLayout>
